--- a/containrrassets/style.css
+++ b/containrrassets/style.css
@@ -41,6 +41,11 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+.qsandlightOutilne {
+    text-shadow: 0.04em 0 var(--black), -0.04em 0 var(--black), 0 0.04em var(--black), 0 -0.04em var(--black),
+             0.02em 0.02em var(--black), -0.02em -0.02em var(--black), 0.02em -0.02em var(--black), -0.02em 0.02em var(--black);
+}
+
 body {
     background-color: var(--black);
     font-family: 'Quicksand', sans-serif;
@@ -53,6 +58,7 @@ body {
     border-style: solid;
     border-radius: 1vmin;
     width: calc(100% - 2vmin);
+    margin-bottom: 10vmin;
     font-size: 0;
     height: min-content;
     display: block;
@@ -61,11 +67,12 @@ body {
 
 .screenshotProject {
     display: block;
-    width: calc(0.98 * var(--screen-width));
+    width: 100%;
     height: calc(0.3 * var(--screen-width));
     background-color: var(--black-transparent);
     color: white;
     line-height: normal;
+    cursor: pointer;
 }
 
 .screenshotProject>img {
@@ -76,10 +83,12 @@ body {
 
 .screenshotProject>span {
     display: inline-block;
-    height: 100%;
-    width: 44%;
+    height: 96%;
+    width: 41%;
+    padding: 2%;
     vertical-align: top;
     text-align: center;
+    user-select: none;
 }
 
 .screenshotProject>span>.title {
@@ -101,7 +110,6 @@ body {
     left: max(50% - var(--screen-width) / 2);
     background-color: var(--black-transparent);
     border-radius: 1vmin 1vmin 0 0;
-    margin-top: 1vmin;
     padding: 1vmin 0 1vmin 0;
     animation-delay: 7s;
     font-size:0;
